--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -394,26 +394,26 @@
 
     <!-- FORM 2 - B-->
     <string name="Section10"> 2. General Information </string>
-    <string name="RS101"> 2.01 Outside Temperature (°C) </string>
-    <string name="RS102"> 2.02 Height of the child (cm) </string>
-    <string name="RS103"> 2.03 Weight of the child (kg) </string>
+    <string name="RS101"> 2.01:  Outside Temperature (°C) </string>
+    <string name="RS102"> 2.02:  Height of the child (cm) </string>
+    <string name="RS103"> 2.03:  Weight of the child (kg) </string>
 
     <string name="Section11"> 3.0 Pre-Exercise Spirometry </string>
-    <string name="RS111"> 3.01 Pre-exercise spirometry performed </string>
-    <string name="RS112"> 3.02 Reasons for not performing spirometry </string>
-    <string name="RS113A"> 3.03A Test start time </string>
-    <string name="RS113B"> 3.03B Test End time </string>
-    <string name="RS114A"> 3.04A Total number of test conducted </string>
-    <string name="RS114B"> 3.04B Total number of acceptable test </string>
-    <string name="RS115"> 3.05 Has the child successfully completed three spirometry tests </string>
-    <string name="RS116"> 3.06 Reason for not completing three spirometry tests </string>
+    <string name="RS111"> 3.01:  Pre-exercise spirometry performed </string>
+    <string name="RS112"> 3.02:  Reasons for not performing spirometry </string>
+    <string name="RS113A"> 3.03A:  Test Start Time </string>
+    <string name="RS113B"> 3.03B:  Test End Time </string>
+    <string name="RS114A"> 3.04A:  Total number of test conducted </string>
+    <string name="RS114B"> 3.04B:  Total number of acceptable test </string>
+    <string name="RS115"> 3.05: Has the child successfully completed three spirometry tests </string>
+    <string name="RS116"> 3.06: Reason for not completing three spirometry tests </string>
     <string name="RS116a"> Dizziness </string>
     <string name="RS116b"> Cough </string>
     <string name="RS116c"> Child is not cooperating </string>
     <string name="RS116d"> Machine not working </string>
 
     <string name="RS117"> 3.07: T E S T S </string>
-    <string name="RS117A"> 3.07A: Quality of the test </string>
+    <string name="RS117A"> A: Quality of the test </string>
     <string name="RS117Aa"> Good quality and test is acceptable </string>
     <string name="RS117Ab"> Cough, glottis closure or double peaks </string>
     <string name="RS117Ac"> Back extrapolate volume large </string>
@@ -424,10 +424,10 @@
     <string name="RS117Ah"> FEV1 Variable </string>
     <string name="RS117Ai"> PEF Variable </string>
     <string name="RS117Aj"> Not Attempt  </string>
-    <string name="RS117B"> 3.07B: Test Accepted </string>
-    <string name="RS117C"> 3.07C: FVC (L) </string>
-    <string name="RS117D"> 3.07D: FEV1 (L) </string>
-    <string name="RS117E"> 3.07E: FEV1/FVC (%) </string>
+    <string name="RS117B"> B: Test Accepted </string>
+    <string name="RS117C"> C: FVC (L) </string>
+    <string name="RS117D"> D: FEV1 (L) </string>
+    <string name="RS117E"> E: FEV1/FVC (%) </string>
 
     <string name="RS1116"> 3.16: Does the child need to come for a next clinical session to complete the spirometry test </string>
     <string name="RS1116Hint"> A child needs to visit the clinic again if he/she does not complete the three acceptable spirometry test and parents do not withdrawn the consent for the test </string>
@@ -453,7 +453,7 @@
     <string name="RS127d"> Machine Not Working </string>
 
     <string name="RS128"> 4.08: T E S T S </string>
-    <string name="RS128A"> 4.08A: Quality of the test </string>
+    <string name="RS128A"> A: Quality of the test </string>
     <string name="RS128Aa"> Good quality and test is acceptable </string>
     <string name="RS128Ab"> Cough, glottis closure or double peaks </string>
     <string name="RS128Ac"> Back extrapolate volume large </string>
@@ -464,16 +464,16 @@
     <string name="RS128Ah"> FEV1 Variable </string>
     <string name="RS128Ai"> PEF Variable </string>
     <string name="RS128Aj"> Not Attempt  </string>
-    <string name="RS128B"> 4.08B: Test Accepted </string>
-    <string name="RS128C"> 4.08C: FVC (L) </string>
-    <string name="RS128D"> 4.08D: FEV1 (L) </string>
-    <string name="RS128E"> 4.08E: FEV1/FVC (%) </string>
+    <string name="RS128B"> B: Test Accepted </string>
+    <string name="RS128C"> C: FVC (L) </string>
+    <string name="RS128D"> D: FEV1 (L) </string>
+    <string name="RS128E"> E: FEV1/FVC (%) </string>
 
     <string name="RS1217"> 4.17: Does the child need to attend a clinical session to complete the exercise challenge test  </string>
     <string name="RS1217Hint"> A child needs to visit the clinic again if he/she does not complete the three acceptable spirometry test after completion the exercise and parents do not withdrawn the consent for the test </string>
     <string name="RS1218"> 4.18: Date of next clinical session </string>
 
-    <string name="Section13"> 5.0  Eosinophil count test </string>
+    <string name="Section13"> 5.0  Eosinophil Count Test </string>
     <string name="RS131"> 5.01:  Blood drawn for eosinophil count </string>
     <string name="RS132"> 5.02:  Reason for not collecting blood </string>
     <string name="RS132a"> Caregiver did not consent for blood collection </string>
@@ -507,13 +507,18 @@
     <string name="yes"> ہاں </string>
     <string name="no"> نہیں </string>
     <string name="dkn"> پتہ نہیں </string>
+    <string name="Eyes"> Yes </string>
+    <string name="Eno"> No </string>
+    <string name="Edkn"> Don\'t Know </string>
     <string name="day"> دن </string>
     <string name="date"> تاريخ </string>
     <string name="month"> مہینہ </string>
     <string name="year"> سال </string>
-    <string name="other">دیگر</string>
+    <string name="other"> دیگر </string>
     <string name="uother"> دیگر </string>
     <string name="specify"> وضاحت کریں </string>
+    <string name="Eother"> Other </string>
+    <string name="Especify"> Specify </string>
 
     <!-- Strings related to Sec
     ons Below -->
@@ -532,6 +537,9 @@
     <string name="ed_sentence">QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm,.?-#()1234567890</string>
     <string name="ed_numbersOnly"> 12345 67890</string>
     <string name="num">اعداد</string>
+    <string name="centigrade"> °C </string>
+    <string name="centimeter"> cm </string>
+    <string name="Kilogram"> kg </string>
     <string name="gender">جنس</string>
 
 
