--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -274,62 +274,60 @@
 
     <string name="Section5"> ایٹوپک ڈرمیٹائٹس کے لئے اسکریننگ </string>
     <string name="RS49">5.01: کیا کبھی بھی بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے  تھے جو کم سے کم 12 ماہ تک آتے جاتے رہے ؟ </string>
-    <string name="RS50">کیا پچھلے 6مہینے کے دوران بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے ہیں؟ </string>
-    <string name="RS51"> کیا یہ جلد پر خارش کے ساتھ سُرخ داغ یا دانے سے جسم کے یہ حصے متاثرہوئے تھے: کہنیوں کے تہہ ، گھٹنوں کے پیچھے ، ٹخنوں کے سامنے ، کولہوں کے نیچے ، یا گردن ، کان یا آنکھوں کے گرد؟  </string>
+    <string name="RS50">  2.01 کیا پچھلے 6مہینے کے دوران بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے ہیں؟ </string>
+    <string name="RS51">2.02 کیا یہ جلد پر خارش کے ساتھ سُرخ داغ یا دانے سے جسم کے یہ حصے متاثرہوئے تھے: کہنیوں کے تہہ ، گھٹنوں کے پیچھے ، ٹخنوں کے سامنے ، کولہوں کے نیچے ، یا گردن ، کان یا آنکھوں کے گرد؟  </string>
     <string name="RS52">5.04: پہلی مرتبہ کس عمر میں یہ خارش کے ساتھ سُرخ داغ یا دانے ہوئے تھے؟  </string>
-    <string name="RS53">کیا پچھلے 6 مہینے کے دوران یہ خارش
+    <string name="RS53">2.03 کیا پچھلے 6 مہینے کے دوران یہ خارش
 کے ساتھ سُرخ داغ یا دانے پوری طرح
 صاف ہوگئے تھے؟</string>
-    <string name="RS54">پچھلے 6 مہینوں میں ، کتنی مرتبہ، آپ کا
+    <string name="RS54"> 2.04 پچھلے 6 مہینوں میں ، کتنی مرتبہ، آپ کا
 بچہ رات کے وقت جلد پر خارش کی وجہ
 سے جاگ گیا تھا؟</string>
     <string name="RS54a"> 1 سے 2 مرتبہ </string>
     <string name="RS54b"> 3 سے 5 مرتبہ </string>
     <string name="RS54c"> 5 سے زائد مرتبہ </string>
-    <string name="RS55">کیا آپکے بچے کو کبھی ایکزیما (خارش کے ساتھ سُرخ داغ یا دانے) ہوا تھا ؟ </string>
+    <string name="RS55">2.05 کیا آپکے بچے کو کبھی ایکزیما (خارش کے ساتھ سُرخ داغ یا دانے) ہوا تھا ؟  </string>
     <string name="RS56">5.08: گزشتہ 12 مہینوں کے دوران آپ کے بچے کو ایکزیما (خارش کے ساتھ سُرخ داغ یا دانے) ہوا ہے ؟ </string>
 
-    <string name="section6"> 6.0) دمہ کے لئے اسکریننگ</string>
+    <string name="section6"> 3.0) دمہ کے لئے اسکریننگ</string>
     <string name="section6sub">(دمہ اور سینے سے سیٹی کی آواز کی ویڈیو دکھائیں)</string>
     <string name="RS57">6.01: کیا ماضی میں کسی بھی وقت بچے کے سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
-    <string name="RS58">6.02: کیا پچھلے 06 مہینوں میں کسی بھی وقت سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز)آئی ہے؟ </string>
-    <string name="RS59">6.03: پچھلے 06 مہینوں میں گھرگھراہٹ (سینے سے سیٹی کی آواز) کے کتنے واقعات ہوئے ہیں؟ </string>
-    <string name="RS60">6.04: پچھلے 06 مہینوں میں ، گھرگھراہٹ (سینے سے سیٹی کی آواز) کی وجہ سے کتنی بار نیند خراب ہوئی ہے </string>
+    <string name="RS58">3.01: کیا پچھلے 06 مہینوں میں کسی بھی وقت سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز)آئی ہے؟ </string>
+    <string name="RS59">3.02: پچھلے 06 مہینوں میں گھرگھراہٹ (سینے سے سیٹی کی آواز) کے کتنے واقعات ہوئے ہیں؟ </string>
+    <string name="RS60">3.03: پچھلے 06 مہینوں میں ، گھرگھراہٹ (سینے سے سیٹی کی آواز) کی وجہ سے کتنی بار نیند خراب ہوئی ہے </string>
     <string name="RS60a"> ہفتہ ایک رات سے کم </string>
     <string name="RS60b"> ہفتہ ایک یا زیادہ راتیں </string>
-    <string name="RS61">6.05: پچھلے 06 مہینوں میں ، رات میں کھانسی کی وجہ سے کتنی بار نیند میں خلل پڑا ہے ، جب آپ کا بچہ ٹھیک ظاہر ہوتا ہے (یعنی کوئی زُکام یا سینے میں انفکشن نہیں ہوتا ہے) </string>
+    <string name="RS61">3.04: پچھلے 06 مہینوں میں ، رات میں کھانسی کی وجہ سے کتنی بار نیند میں خلل پڑا ہے ، جب آپ کا بچہ ٹھیک ظاہر ہوتا ہے (یعنی کوئی زُکام یا سینے میں انفکشن نہیں ہوتا ہے) </string>
     <string name="RS61a"> ہفتہ ایک رات سے کم </string>
     <string name="RS61b"> ہفتہ ایک یا زیادہ راتیں </string>
-    <string name="RS62">6.06: پچھلے 06 مہینوں میں ، گھرگھراھٹ کبھی اتنی شدید ہوئی کہ بولنے یا رونے کی آواز کو محدود کردے؟ </string>
-    <string name="RS63">6.07: کیا کبھی بچے کو دمہ کی تشخیص ہوئی ہے؟ </string>
-    <string name="RS64">6.08: دمہ کی تشخیص کس نے کی؟ </string>
+    <string name="RS62">3.05: پچھلے 06 مہینوں میں ، گھرگھراھٹ کبھی اتنی شدید ہوئی کہ بولنے یا رونے کی آواز کو محدود کردے؟ </string>
+    <string name="RS63">3.06: کیا کبھی بچے کو دمہ کی تشخیص ہوئی ہے؟ </string>
+    <string name="RS64">3.07: دمہ کی تشخیص کس نے کی؟ </string>
     <string name="RS64a"> ڈاکٹر </string>
     <string name="RS64b"> پیرا میڈیک </string>
     <string name="RS64c"> نرس </string>
     <string name="RS6496"> کوئی اور </string>
-    <string name="RS65">6.09: پچھلے 06 مہینوں میں ، کیا آپ کے بچے کو ورزش کے دوران یا اس کے بعد خشک کھانسی ہوئی ہے (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
-    <string name="RS66">6.10: پچھلے 06 مہینوں میں ، کیا اس سردی یا سینے میں انفیکشن سے وابستہ کھانسی کے علاوہ بھی ، بچے کو رات کو خشک کھانسی ہوئی ہے؟ </string>
-    <string name="RS67">پچھلے چھ ماہ میں ، آپ کے بچے نے
+    <string name="RS65">3.08: پچھلے 06 مہینوں میں ، کیا آپ کے بچے کو ورزش کے دوران یا اس کے بعد خشک کھانسی ہوئی ہے (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
+    <string name="RS66">3.09: پچھلے 06 مہینوں میں ، کیا اس سردی یا سینے میں انفیکشن سے وابستہ کھانسی کے علاوہ بھی ، بچے کو رات کو خشک کھانسی ہوئی ہے؟ </string>
+    <string name="RS67"> 3.10 پچھلے چھ ماہ میں ، آپ کے بچے نے
 دمہ اور سانس لینے میں دشواریوں کے
 سبب کتنی بار صحت کی سہولیات کا دورہ
 کیا؟</string>
-    <string name="RS68">پچھلے چھ ماہ میں ، آپ کے بچے نے
-دمہ اور سانس لینے میں دشواریوں کے
-سبب کتنی بار صحت کی سہولیات کا دورہ
-کیا؟</string>
-    <string name="RS69">کیا علامات کو کنٹرول کرنے کے لئے
+    <string name="RS67a">طبی دورے کی تعداد </string>
+    <string name="RS68">3.11 دمہ یا سانس لینے میں دشواریوں کے سبب آپ کے بچے نے آخری بار ہیلتھ کیر سنٹر کا دورہ کب کیا تھا؟ </string>
+    <string name="RS69">3.12 کیا علامات کو کنٹرول کرنے کے لئے
 کسی دوا کا استعمال کیا ہے؟</string>
-    <string name="RS70">دمہ کو کنٹرول کرنے کے لئے استعمال
+    <string name="RS70">3.13 دمہ کو کنٹرول کرنے کے لئے استعمال
 ہونے والی دوائیں</string>
 
-    <string name="section7"> راینائیٹس کے لئے اسکریننگ </string>
-    <string name="RS71">7.01: جب سردی یا زُکام نہیں تھا تو کیا کبھی آپ کے بچے کو چھینکنے یا ناک بند ہونے/ بہنے سے تکلیف ہوئی ہے ؟ </string>
+    <string name="section7">4.0) راینائیٹس کے لئے اسکریننگ </string>
+    <string name="RS71">4.01: جب سردی یا زُکام نہیں تھا تو کیا کبھی آپ کے بچے کو چھینکنے یا ناک بند ہونے/ بہنے سے تکلیف ہوئی ہے ؟ </string>
     <string name="RS72">7.02: پچھلے 06 مہینوں میں، جب سردی یا زُکام نہیں تھا ، تو بچے کو چھینکنے ، یا ناک بند ہونے سے کتنی بار مسئلہ ہوا ؟ </string>
     <string name="RS72a"> 1 سے 2 مرتبہ </string>
     <string name="RS72b"> 3 سے 5 مرتبہ </string>
     <string name="RS72c"> 5 سے زائد مرتبہ </string>
-    <string name="RS73">7.03: پچھلے 06 مہینوں میں، کیا ناک کی تکلیف کے ساتھ آنکھوں میں خارش ہوئی تھی ؟ </string>
-    <string name="RS74">7.04: پچھلے 06 ماہ میں کِن مہینوں کے دوران ناک کی تکلیف ہوئی؟  </string>
+    <string name="RS73">4.02: پچھلے 06 مہینوں میں، کیا ناک کی تکلیف کے ساتھ آنکھوں میں خارش ہوئی تھی ؟ </string>
+    <string name="RS74">4.03: پچھلے 06 ماہ میں کِن مہینوں کے دوران ناک کی تکلیف ہوئی؟  </string>
     <string name="RS74a"> جنوری </string>
     <string name="RS74b"> فروری </string>
     <string name="RS74c"> مارچ </string>
@@ -342,28 +340,28 @@
     <string name="RS74j"> اکتوبر </string>
     <string name="RS74k"> نومبر </string>
     <string name="RS74l"> دسمبر </string>
-    <string name="RS75">7.05: پچھلے 06 مہینوں میں ، ناک کی اس پریشانی نے آپ کے بچے کی روز مرہ کی سرگرمیوں میں کتنا مداخلت کی ہے؟ </string>
+    <string name="RS75">4.04: پچھلے 06 مہینوں میں ، ناک کی اس پریشانی نے آپ کے بچے کی روز مرہ کی سرگرمیوں میں کتنا مداخلت کی ہے؟ </string>
     <string name="RS75a"> کوئی پریشانی نہیں </string>
     <string name="RS75b"> کم سے کم پریشانی </string>
     <string name="RS75c"> درمیانی پریشانی </string>
     <string name="RS75d"> شدید پریشانی  </string>
     <string name="RS76">7.06: کیا بچے کو کبھی بخار ہوا ہے؟ </string>
-    <string name="RS77">7.07: پچھلے 06 مہینے میں بچے کو بخار ہوا ہے؟ </string>
+    <string name="RS77">4.05: پچھلے 06 مہینے میں بچے کو بخار ہوا ہے؟ </string>
 
-    <string name="section8"> خاندان کی بیماری کے لئے اسکریننگ </string>
-    <string name="RS78">8.01: کیا ماں کو کبھی یہ مسائل ہوئے ؟ </string>
+    <string name="section8">5.0) خاندان کی بیماری کے لئے اسکریننگ </string>
+    <string name="RS78">5.01: کیا ماں کو کبھی یہ مسائل ہوئے ؟ </string>
     <string name="RS781"> دمہ </string>
     <string name="RS782">رائینایٹس (ناک کی سوزش)  </string>
     <string name="RS783"> ایکزیما (جلد پر سُرخ داغ اور خارش) </string>
 
-    <string name="RS79">8.02: کیا والد کو کبھی یہ مسائل ہوئے ؟ </string>
+    <string name="RS79">5.02: کیا والد کو کبھی یہ مسائل ہوئے ؟ </string>
     <string name="RS791"> دمہ </string>
     <string name="RS792"> رائینایٹس (ناک کی سوزش) </string>
     <string name="RS793"> ایکزیما (جلد پر سُرخ داغ اور خارش) </string>
 
 
-    <string name="Section9"> پیش قدمی عوامل </string>
-    <string name="RS80">9.01: اِن میں سے کِن چیزوں کی وجہ سے آپکے بچے کو سانس لینے کی مشکلات میں مذید اضافہ ہوتا ہے؟ </string>
+    <string name="Section9">6.0) پیش قدمی عوامل </string>
+    <string name="RS80">6.01: اِن میں سے کِن چیزوں کی وجہ سے آپکے بچے کو سانس لینے کی مشکلات میں مذید اضافہ ہوتا ہے؟ </string>
     <string name="RS801"> ورزش </string>
     <string name="RS802"> انفیکشن </string>
     <string name="RS803"> جذبات۔ (رونا / ہنسنا) </string>
@@ -378,10 +376,10 @@
     <string name="RS8012"> کچھ اور </string>
 
     <string name="Section92"> 2 پیش قدمی عوامل </string>
-    <string name="RS81">9.02: کیا آپ کے بچے کو کسی غذا سے الرجی ہے؟ </string>
-    <string name="RS82">9.03: آپ کے بچے کو کون سی غذا سے الرجی ہے؟ </string>
-    <string name="RS83"> کیا آپ کے بچے کو پچھلے چھ مہینوں میں ایکزیما ہوا ہے ؟ ( جلد پر سُرخ داغ اور خارش ) </string>
-    <string name="RS84">ایکزیما کس جگہ ہوا تھا؟</string>
+    <string name="RS81">6.02: کیا آپ کے بچے کو کسی غذا سے الرجی ہے؟ </string>
+    <string name="RS82">6.03: آپ کے بچے کو کون سی غذا سے الرجی ہے؟ </string>
+    <string name="RS83">6:04 کیا آپ کے بچے کو پچھلے چھ مہینوں میں ایکزیما ہوا ہے ؟ ( جلد پر سُرخ داغ اور خارش ) </string>
+    <string name="RS84">6:05 ایکزیما کس جگہ ہوا تھا؟</string>
     <string name="RS84a">چہرہ</string>
     <string name="RS84b">گردن</string>
     <string name="RS84c">کوہنیوں</string>
@@ -389,7 +387,7 @@
     <string name="RS84e">کرب</string>
     <string name="RS84f">گھٹنوں</string>
     <string name="RS84g">ٹخنوں</string>
-    <string name="RS85"> کیا ہیلتھ کا خیال رکھنے والے نے ہیلتھ کارڈ دکھایا؟ </string>
+    <string name="RS85">7:03 کیا ہیلتھ کا خیال رکھنے والے نے ہیلتھ کارڈ دکھایا؟ </string>
 
 
     <!-- FORM 2 - B-->
