Re-Arranged pre, post, test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -391,100 +391,86 @@
 
 
     <!-- FORM 2 - B-->
-    <string name="Section10"> 2. General Information </string>
-    <string name="RS101"> 2.01:\t Outside Temperature (°C) </string>
-    <string name="RS102"> 2.02:\t Height of the child (cm) </string>
-    <string name="RS103"> 2.03:\t Weight of the child (kg) </string>
+    <string name="SectionT2"> 2. General Information </string>
+    <string name="RST201"> 2.01:\t Outside Temperature (°C) </string>
+    <string name="RST202"> 2.02:\t Height of the child (cm) </string>
+    <string name="RST203"> 2.03:\t Weight of the child (kg) </string>
 
-    <string name="Section11"> 3.0 Pre-Exercise Spirometry </string>
-    <string name="RS111"> 3.01:\t Pre-exercise spirometry performed </string>
-    <string name="RS113TS"> Test Assessor </string>
-    <string name="RS112"> 3.02:\t Reasons for not performing spirometry </string>
-    <string name="RS113A"> 3.03A:\t Test Start Time </string>
-    <string name="RS113B"> 3.03B:\t Test End Time </string>
-    <string name="RS114A"> 3.04A:\t Total number of test conducted </string>
-    <string name="RS114B"> 3.04B:\t Total number of acceptable test </string>
-    <string name="RS115"> 3.05: Has the child successfully completed three spirometry tests </string>
-    <string name="RS116"> 3.06: Reason for not completing three spirometry tests </string>
-    <string name="RS116a"> Dizziness </string>
-    <string name="RS116b"> Cough </string>
-    <string name="RS116c"> Child is not cooperating </string>
-    <string name="RS116d"> Machine not working </string>
+    <string name="SectionT3"> 3.0 Pre-Exercise Spirometry </string>
+    <string name="RST301"> 3.01:\t Pre-exercise spirometry performed </string>
+    <string name="RST3AS"> Test Assessor </string>
+    <string name="RST302"> 3.02:\t Reasons for not performing spirometry </string>
+    <string name="RST303A"> 3.03A:\t Test Start Time </string>
+    <string name="RST303B"> 3.03B:\t Test End Time </string>
+    <string name="RST304A"> 3.04A:\t Total number of test conducted </string>
+    <string name="RST304B"> 3.04B:\t Total number of acceptable test </string>
+    <string name="RST305"> 3.05: Has the child successfully completed three spirometry tests ? </string>
+    <string name="RST306"> 3.06: Reason for not completing three spirometry tests </string>
+    <string name="RST306a"> Dizziness </string>
+    <string name="RST306b"> Cough </string>
+    <string name="RST306c"> Child is not cooperating </string>
+    <string name="RST306d"> Machine not working </string>
 
-    <string name="RS117"> 3.07: T E S T S </string>
-    <string name="RS117A"> A: Quality of the test </string>
-    <string name="RS117Aa"> Good quality and test is acceptable </string>
-    <string name="RS117Ab"> Cough, glottis closure or double peaks </string>
-    <string name="RS117Ac"> Back extrapolate volume large </string>
-    <string name="RS117Ad"> Short Expiration </string>
-    <string name="RS117Ae"> Plateau Not Achieved </string>
-    <string name="RS117Af"> Insufficient efforts </string>
-    <string name="RS117Ag"> FVC Variable </string>
-    <string name="RS117Ah"> FEV1 Variable </string>
-    <string name="RS117Ai"> PEF Variable </string>
-    <string name="RS117Aj"> Not Attempt  </string>
-    <string name="RS117B"> B: Test Accepted </string>
-    <string name="RS117C"> C: FVC (L) </string>
-    <string name="RS117D"> D: FEV1 (L) </string>
-    <string name="RS117E"> E: FEV1/FVC (%) </string>
+    <string name="RST307"> 3.07: T E S T S </string>
+    <string name="RST307A"> A: Test Number </string>
+    <string name="RST307B"> B: Quality of the test </string>
+    <string name="RST307Ba"> Good quality and test is acceptable </string>
+    <string name="RST307Bb"> Cough, glottis closure or double peaks </string>
+    <string name="RST307Bc"> Back extrapolate volume large </string>
+    <string name="RST307Bd"> Short Expiration </string>
+    <string name="RST307Be"> Plateau Not Achieved </string>
+    <string name="RST307Bf"> Insufficient efforts </string>
+    <string name="RST307Bg"> FVC Variable </string>
+    <string name="RST307Bh"> FEV1 Variable </string>
+    <string name="RST307Bi"> PEF Variable </string>
+    <string name="RST307Bj"> Not Attempt  </string>
+    <string name="RST307C"> C: Test Accepted </string>
+    <string name="RST307D"> D: FVC (L) </string>
+    <string name="RST307E"> E: FEV1 (L) </string>
+    <string name="RST307F"> F: FEV1/FVC (%) </string>
 
-    <string name="RS1116"> 3.16: Does the child need to come for a next clinical session to complete the spirometry test </string>
-    <string name="RS1116Hint"> A child needs to visit the clinic again if he/she does not complete the three acceptable spirometry test and parents do not withdrawn the consent for the test </string>
-    <string name="RS1117"> 3.17: Date of Next Clinical Session </string>
+    <string name="RST316"> 3.16: Does the child need to come for a next clinical session to complete the spirometry test </string>
+    <string name="RST316Hint"> A child needs to visit the clinic again if he/she does not complete the three acceptable spirometry test and parents do not withdrawn the consent for the test </string>
+    <string name="RST317"> 3.17: Date of Next Clinical Session </string>
 
-    <string name="Section12"> 4.0  Post-Exercise Spirometry </string>
-    <string name="RS121"> 4.01: Has the child performed exercise challenge test </string>
-    <string name="RS122A"> 4.02A: Exercise Start Time </string>
-    <string name="RS122B"> 4.02B: Exercise Stop Time </string>
-    <string name="RS122C"> 4.02C: Distance covered (meters) </string>
-    <string name="RS122D"> 4.02D: Heart Rate Before Exercise </string>
-    <string name="RS122E"> 4.02E: Heart Rate After Exercise </string>
+    <string name="SectionT4"> 4.0  Post-Exercise Spirometry </string>
+    <string name="RST401"> 4.01: Has the child performed exercise challenge test </string>
+    <string name="RST402A"> 4.02A: Exercise Start Time </string>
+    <string name="RST402B"> 4.02B: Exercise Stop Time </string>
+    <string name="RST402C"> 4.02C: Distance covered (meters) </string>
+    <string name="RST402D"> 4.02D: Heart Rate Before Exercise </string>
+    <string name="RST402E"> 4.02E: Heart Rate After Exercise </string>
 
-    <string name="RS123"> 4.03: Post Exercise Spirometry Performed </string>
-    <string name="RS124"> 4.04: Reasons for not performing spirometry </string>
-    <string name="RS125A"> 4.05A: Total number of test conducted </string>
-    <string name="RS125B"> 4.05B: Total number of acceptable test </string>
-    <string name="RS126"> 4.06: Has the child successfully completed three post exercise spirometry tests </string>
-    <string name="RS127"> 4.07: Reason for not completing three spirometry tests </string>
-    <string name="RS127a"> Dizziness </string>
-    <string name="RS127b"> Cough </string>
-    <string name="RS127c"> Child is not cooperating </string>
-    <string name="RS127d"> Machine Not Working </string>
+    <string name="RST403"> 4.03: Post Exercise Spirometry Performed </string>
+    <string name="RST404"> 4.04: Reasons for not performing spirometry </string>
+    <string name="RST405A"> 4.05A: Test Start Time </string>
+    <string name="RST405B"> 4.05B: Test End Time </string>
+    <string name="RST406A"> 4.06A: Total number of test conducted </string>
+    <string name="RST406B"> 4.06B: Total number of acceptable test </string>
+    <string name="RST407"> 4.07: Has the child successfully completed three post exercise spirometry tests </string>
+    <string name="RST408"> 4.08: Reason for not completing three spirometry tests </string>
+    <string name="RST408a"> Dizziness </string>
+    <string name="RST408b"> Cough </string>
+    <string name="RST408c"> Child is not cooperating </string>
+    <string name="RST408d"> Machine Not Working </string>
 
-    <string name="RS128"> 4.08: T E S T S </string>
-    <string name="RS128A"> A: Quality of the test </string>
-    <string name="RS128Aa"> Good quality and test is acceptable </string>
-    <string name="RS128Ab"> Cough, glottis closure or double peaks </string>
-    <string name="RS128Ac"> Back extrapolate volume large </string>
-    <string name="RS128Ad"> Short Expiration </string>
-    <string name="RS128Ae"> Plateau Not Achieved </string>
-    <string name="RS128Af"> Insufficient efforts </string>
-    <string name="RS128Ag"> FVC Variable </string>
-    <string name="RS128Ah"> FEV1 Variable </string>
-    <string name="RS128Ai"> PEF Variable </string>
-    <string name="RS128Aj"> Not Attempt  </string>
-    <string name="RS128B"> B: Test Accepted </string>
-    <string name="RS128C"> C: FVC (L) </string>
-    <string name="RS128D"> D: FEV1 (L) </string>
-    <string name="RS128E"> E: FEV1/FVC (%) </string>
+    <string name="RST417"> 4.17: Does the child need to attend a clinical session to complete the exercise challenge test  </string>
+    <string name="RST417Hint"> A child needs to visit the clinic again if he/she does not complete the three acceptable spirometry test after completion the exercise and parents do not withdrawn the consent for the test </string>
+    <string name="RST418"> 4.18: Date of next clinical session </string>
 
-    <string name="RS1217"> 4.17: Does the child need to attend a clinical session to complete the exercise challenge test  </string>
-    <string name="RS1217Hint"> A child needs to visit the clinic again if he/she does not complete the three acceptable spirometry test after completion the exercise and parents do not withdrawn the consent for the test </string>
-    <string name="RS1218"> 4.18: Date of next clinical session </string>
+    <string name="SectionT5"> 5.0  Eosinophil Count Test </string>
+    <string name="RST501"> 5.01:  Blood drawn for eosinophil count </string>
+    <string name="RST502"> 5.02:  Reason for not collecting blood </string>
+    <string name="RST502a"> Caregiver did not consent for blood collection </string>
+    <string name="RST502b"> Collection failure </string>
+    <string name="RST502c"> Child was not cooperative </string>
+    <string name="RST503"> 5.03:  Does the child need to visit the clinic for performing the eosinophil test </string>
+    <string name="RST503Hint"> A child needs to visit the clinic again if he/she does not provide the blood samples and parents do not withdrawn the consent for the test </string>
+    <string name="RST504"> 5.04:  Date of next clinical visit </string>
 
-    <string name="Section13"> 5.0  Eosinophil Count Test </string>
-    <string name="RS131"> 5.01:  Blood drawn for eosinophil count </string>
-    <string name="RS132"> 5.02:  Reason for not collecting blood </string>
-    <string name="RS132a"> Caregiver did not consent for blood collection </string>
-    <string name="RS132b"> Collection failure </string>
-    <string name="RS132c"> Child was not cooperative </string>
-    <string name="RS133"> 5.03:  Does the child need to visit the clinic for performing the eosinophil test </string>
-    <string name="RS133Hint"> A child needs to visit the clinic again if he/she does not provide the blood samples and parents do not withdrawn the consent for the test </string>
-    <string name="RS134"> 5.04:  Date of next clinical visit </string>
-
-    <string name="RS141"> 6.0:  Do the child need to attend a clinical visit to perform any uncompleted test </string>
-    <string name="RS142"> 6.01:  Date of next clinic visit </string>
-    <string name="RS143"> 6.02:  Name of the person conducted the clinical assessment </string>
+    <string name="RST600"> 6.0:  Does the child need to attend a clinical visit to perform any uncompleted test </string>
+    <string name="RST601"> 6.01:  Date of next clinic visit </string>
+    <string name="RST6AS"> Test Assessor </string>
 
     <!--End RSV Study Strings-->
 
