--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,10 +309,7 @@
     <string name="RS6496"> کوئی اور </string>
     <string name="RS65">3.08: پچھلے 06 مہینوں میں ، کیا آپ کے بچے کو ورزش کے دوران یا اس کے بعد خشک کھانسی ہوئی ہے (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
     <string name="RS66">3.09: پچھلے 06 مہینوں میں ، کیا اس سردی یا سینے میں انفیکشن سے وابستہ کھانسی کے علاوہ بھی ، بچے کو رات کو خشک کھانسی ہوئی ہے؟ </string>
-    <string name="RS67"> 3.10 پچھلے چھ ماہ میں ، آپ کے بچے نے
-دمہ اور سانس لینے میں دشواریوں کے
-سبب کتنی بار صحت کی سہولیات کا دورہ
-کیا؟</string>
+    <string name="RS67"> 3.10 دمہ یا سانس لینے میں دشواریوں کے سبب آپ کے بچے نے آخری بار ہیلتھ کیر سنٹر کا دورہ کب کیا تھا؟</string>
     <string name="RS67a">طبی دورے کی تعداد </string>
     <string name="RS68">3.11 دمہ یا سانس لینے میں دشواریوں کے سبب آپ کے بچے نے آخری بار ہیلتھ کیر سنٹر کا دورہ کب کیا تھا؟ </string>
     <string name="RS69">3.12 کیا علامات کو کنٹرول کرنے کے لئے
